Stesura specifiche architetturali parziale web app

--- a/docs/esterni/specifiche_architetturali/lista metodi/listaMetodi.tex
+++ b/docs/esterni/specifiche_architetturali/lista metodi/listaMetodi.tex
@@ -4,7 +4,7 @@
 \usepackage{longtable}
 \graphicspath{ {images/} }
 
-\newcommand{\templates}{../../template}
+\newcommand{\templates}{../../../template}
 \input{\templates/style}
 \input{\templates/front_page}
 \input{\templates/history}
