--- a/docs/esterni/manuali/manuale_acquirente.tex
+++ b/docs/esterni/manuali/manuale_acquirente.tex
@@ -22,13 +22,13 @@ Manuale acquirente.
 
 \section{Introduzione}
 Attraverso l'utilizzo della blockchain \textit{Polygon}, Shop Chain fornisce un sistema decentralizzato per il pagamento di prodotti in MATIC. Utilizzando Shop Chain è possibile effettuare una qualsiasi attività di compravendita in maniera sicura per entrambi gli attori dello scambio. L'acquirente che desidera acquistare un prodotto da un venditore in un e-commerce potrà effettuare il suo pagamento in MATIC, ovvero il token nativo della blockchain \textit{Polygon}. Il venditore non può disporre immediatamente del saldo ricevuto poiché sarà bloccato fino alla ricezione del pacco, momento nel quale l'acquirente può sbloccare i fondi attraverso la scannerizzazione di un codice QR presente sulla scatola.\\
-Il presente documento ha la funzione di descrivere in dettaglio la procedura da seguire per l'acquirente per il corretto acquisto di un item e sucessivo ritiro e sblocco fondi attraverso il servizio Shop Chain.
-
+Il presente documento ha la funzione di descrivere in dettaglio la procedura da seguire per l'acquirente per il corretto acquisto di un item e successivo ritiro e sblocco fondi attraverso il servizio Shop Chain.
 
 \section{Configurazione wallet}
 \subsection{Wallet Metamask}
 Per poter effettuare il pagamento sarà necessario l'utilizzo di un wallet Metamask. Visitare \href{https://www.metamask.io}{metamask.io} per maggiori informazioni.
 \subsubsection{Configurazione}
+\label{sec:network}
 Se il network Polygon non è gia stato inserito nel proprio wallet Metamask, procedere con la lettura del seguente paragrafo.
 Per l'inserimento e la configurazione del network Polygon nel proprio wallet Metamask è necessario utilizzare i seguenti dati:
 \begin{itemize}
@@ -94,7 +94,7 @@ Inoltre attraverso la sezione "Outgoing" posta nel menù in alto a destra (Fig. 
 \item \textbf{From}: indica l'address del wallet dal quale è stato eseguito il pagamento;
 \item \textbf{To}: indica l'address del wallet del venditore;
 \item \textbf{Opened}: indica la data in cui è stato eseguito l'acquisto;
-\item \textbf{Expired}: indica la data in cui scade l'ordine e in cui i fondi vengono automaticamente sbloccati, si tratta di 14 giorni dopo l'acquisto.
+\item \textbf{Expired}: indica la data in cui scade l'ordine e in cui i fondi vengono automaticamente rimborsati, si tratta di 14 giorni dopo l'acquisto.
 \item \textbf{Stato dell'ordine}:
   \begin{itemize}
     \item \textbf{Open}: l'ordine è ancora aperto e in attesa di conferma;
@@ -104,8 +104,7 @@ Inoltre attraverso la sezione "Outgoing" posta nel menù in alto a destra (Fig. 
   \end{itemize}
 \end{itemize}
 \subsection{Gestione acquisti}
-Per ciascun acquisto l'acquirente ha 14 giorni per annullare il pagamento e dunque essere rimborsato con la valuta stabile DAI. Nel caso l'utente voglia annullare il pagamento dovrà selezionare l'opzione "Refund transaction" (Fig. 4 riquadro 2) e dunque ricevere il rimborso.
-\end{itemize}
+Dopo 14 giorni dalla data di acquisto, se i fondi non sono stati sbloccati dall'acquirente attraverso la scannerizzazione del codice QR, avverrà il rimborso in DAI dell'esatto importo pagato. Nel caso l'acquirente voglia annullare il pagamento manualmente, potrà selezionare l'opzione "Refund transaction" (Fig. 4 riquadro 2) e dunque ricevere il rimborso.
 \FloatBarrier
 \begin{figure}[!h]
 \centering
@@ -127,7 +126,7 @@ In entrambi i casi si viene reindirizzati alla pagina Shop Chain nel browser int
 \subsection{Conferma dell'ordine}
 Prima di procedere con la conferma dell'ordine controllare di:
 \begin{itemize}
-\item utilizzare il network corretto come spiegato al punto 2.1.1;
+\item utilizzare il network corretto come spiegato al punto \hyperref[sec:network]{2.1.1};
 \item utilizzare il wallet con il quale è stato eseguito il pagamento, altrimenti non sarà possibile la conferma;
 \item detenere alcuni MATIC per il pagamento delle tasse per la transazione di conferma.
 \end{itemize}
@@ -143,8 +142,10 @@ Una volta reindirizzati sulla landing page per la conferma dell'acquisto è poss
 \caption{Interfaccia per la conferma dell'ordine.}
 \end{figure}
 \FloatBarrier
+\mbox{}\\
 Terminata la procedura i fondi saranno resi disponibili al venditore, lo stato dell'ordine diventa "Confirmed" e dunque il processo di vendita si è concluso correttamente.
-\\Grazie per aver utilizzato Shop Chain!
+\\ \\
+Grazie per aver utilizzato Shop Chain!
 
 
 
