--- a/docs/esterni/manuali/manuale_e-commerce.tex
+++ b/docs/esterni/manuali/manuale_e-commerce.tex
@@ -27,7 +27,7 @@ Attraverso l'utilizzo della blockchain \textit{Polygon}, Shop Chain fornisce un 
 
 \section{Configurazione wallet}
 \subsection{Wallet Metamask}
-Per poter vendere i propri prodotti sarà necessario l'utilizzo di un wallet Metamask. Visitare \href{https://www.metamask.io}{metamask.io} per maggiori informazioni.
+Per poter usufruire a pieno del nostro servizio sarà necessario l'utilizzo di un wallet Metamask. Visitare \href{https://www.metamask.io}{metamask.io} per maggiori informazioni.
 \subsubsection{Configurazione}
 Se il network Polygon non è gia stato inserito nel proprio wallet Metamask, procedere con la lettura del seguente paragrafo.
 \\Per l'inserimento e la configurazione del network Polygon nel proprio wallet Metamask è necessario utilizzare i seguenti dati:
@@ -54,7 +54,66 @@ Una volta inserito correttamente il network è necessario collegare il proprio w
 \caption{Connessione del wallet Metamask a Shop Chain.}
 \end{figure}
 \FloatBarrier
-
+\section{Visualizzazione e gestione transazioni}
+Per la visualizzazione delle transazioni ricevute da un e-commerce in entrata, è necessario recarsi nella sezione \textbf{Incoming} (Fig. 4) su Shop Chain. Selezionando una transazione sarà possibile gestirla e vederne i dettagli.
+\FloatBarrier
+\begin{figure}[!h]
+\centering
+\includegraphics[width=0.8\linewidth]{img/incoming.png}
+\caption{Sezione Incoming.}
+\end{figure}
+\FloatBarrier
+\subsection{Visualizzazione transazione}
+Selezionando una transazione è possibile visualizzare le seguenti informazioni (Fig. 5 riquadro 1):
+\begin{itemize}
+  \item \textbf{Price:} indica il prezzo dell'oggetto acquistato;
+  \item \textbf{From:} indica l'address del wallet dell'acquirente;
+  \item \textbf{To:} indica l'address del proprio wallet, ovvero il wallet che ha ricevuto il pagamento;
+  \item \textbf{Opened:} indica la data in cui è stato eseguito l'acquisto;
+  \item \textbf{Expire:} indica la data in cui scade l'ordine e in cui i fondi vengono automaticamente rimborsati, si tratta di 14 giorni dopo l'acquisto.
+  \item \textbf{Stato dell'ordine}:
+  \begin{itemize}
+    \item \textbf{Open}: l'ordine è ancora aperto e in attesa di conferma;
+    \item \textbf{Confirmed}: l'ordine è già stato confermato attraverso la scannerizzazione del codice QR dall'acquirente;
+    \item \textbf{Expired}: l'utente ha chiesto il refund poiché non ha ricevuto il pacco entro 14 giorni;
+    \item \textbf{Canceled}: l'ordine è stato rifiutato dall'e-commerce. I fondi utilizzati per il pagamento vengono restituiti all'acquirente nella valuta stabile DAI.
+  \end{itemize}
+\end{itemize}
+\subsection{Gestione transazione}
+Per ciascuna vendita l'e-commerce può scegliere se (Fig. 5 riquadro 2):
+\begin{itemize}
+  \item \textbf{Accettare il pagamento:} l'e-commerce che decide di accettare il pagamento deve necessariamente seguire la procedura sotto riportata per permettere all'acquirente di sbloccare i fondi nel momento della ricezione del pacco.\\
+  La procedura prevede di:
+  \begin{itemize}
+    \item Selezionare l'opzione "Download QR";
+    \item stampare il codice QR scaricato in formato .png;
+    \item attaccare la stampa del codice QR sul pacco contenente l'oggetto acquistato prima di spedirlo.
+  \end{itemize}
+  Una volta spedito il pacco è necessario aspettare la ricezione e lo sblocco fondi da parte dell'acquirente. In caso l'acquirente non sblocchi manualmente i fondi, questi verranno resi disponibili al venditore dopo 14 giorni dall'acquisto.\\
+  \item \textbf{Annullare il pagamento:} l'e-commerce che decide di annullare il pagamento deve selezionare l'opzione "Cancel transaction". L'acquirente viene rimborsato in DAI con l'esatto importo pagato al momento dell'acquisto.
+\end{itemize}
+\FloatBarrier
+\begin{figure}[!h]
+\centering
+\includegraphics[width=0.5\linewidth]{img/transazione_venditore.png}
+\caption{Visualizzazione e gestione vendite.}
+\end{figure}
+\FloatBarrier
+\subsection{Reindirizzamento alla landing page}
+Al fine di permettere all'acquirente, direttamente dal proprio e-commerce, di essere reindirizzato sulla landing page di Shop Chain per effettuare l'acquisto è necessario strutturare l'url di reindirizzamento come segue:
+\begin{quote}
+  \verb|\land?id=<id_item>&r=<pagina_di_ritorno>|.
+\end{quote}
+e dunque sostituire:
+\begin{itemize}
+  \item \verb|<id_item>| con l'id del prodotto che l'acquirente desidera acquistare;
+  \item \verb|<pagina_di_ritorno>| con l'url della pagina alla quale si vuole reindirizzare l'acquirente al termine dell'acquisto.
+\end{itemize}
+Dopo aver confermato il pagamento l'acquirente verrà direttamente reindirizzato alla pagina di ritorno, l'url sarà strutturato come segue:
+\begin{quote}
+  \verb|<pagina_di_ritorno>\transaction_id=<id_transazione>|.
+\end{quote}
+dove \verb|<id_transazione>| corrisponde all'id della transazione effettuata dall'acquirente per l'acquisto del prodotto.
 \section{Vendere un prodotto con Shop Chain}
 Il venditore che desidera vendere il proprio prodotto attraverso Shop Chain deve utilizzare uno script python.
 \\La seguente sezione ha lo scopo di illustrare la corretta procedura per la vendita dei propri prodotti con Shop Chain.
@@ -62,16 +121,16 @@ Il venditore che desidera vendere il proprio prodotto attraverso Shop Chain deve
 \subsubsection{Python, Pip e dipendenze}
 Al fine di utilizzare correttamente lo script è necessario:
 \begin{itemize}
-  \item \href{https://www.python.org/downloads/}{\textbf{Python}} versione maggiore o uguale a 3.8;
-  \item \textbf{Pip} versione maggiore o uguale a 3.8;
+  \item \href{https://www.python.org/downloads/}{Python3.8};
+  \item Pip3.8;
   \item installare le seguenti dipendenze:
   \begin{itemize}
     \item web3;
     \item python-dotenv;
-    \item pytest.
   \end{itemize}
 \end{itemize}
 \subsubsection{Mnemonic phrase}
+\label{sec:mnemonic}
 La mnemonic phrase del proprio wallet sarà necessaria per la configurazione. Se non si ha già salvato in precedenza la propria mnemonic, è possibile ottenerla da Metamask attraverso la seguente procedura:
 \begin{enumerate}
   \item accedere al proprio wallet Metamask;
@@ -90,6 +149,7 @@ Una volta ottenuta la propria mnemonic phrase salvarla per i passi successivi.
 \end{figure}
 \FloatBarrier
 \subsubsection{Provider}
+\label{sec:provider}
 L'ultima fase prima della configurazione prevede di ottenere il provider per la Mainnet di Polygon.
 Sarà dunque necessario registrarsi su \href{https://www.moralis.io}{moralis.io}. Una volta effettuata la registrazione:
 \begin{enumerate}
@@ -109,8 +169,8 @@ Una volta effettuata questa procedura salvare l'url per i passi successivi.
 \subsubsection{Configurazione}
 Infine è necessario creare un file chiamato `.env` all'interno della stessa cartella contenente lo script `sell.py`. Il file dovrà contenere:
 \begin{itemize}
-  \item la mnemonic phrase del proprio wallet, ottenuta al punto 3.1.2;
-  \item il provider ottenuto al punto 3.1.3.
+  \item la mnemonic phrase del proprio wallet, ottenuta al punto \hyperref[sec:mnemonic]{4.1.2};
+  \item il provider ottenuto al punto \hyperref[sec:provider]{4.1.3}.
 \end{itemize}
 Di seguito un esempio del formato corretto da utilizzare:
 \begin{verbatim}
@@ -151,7 +211,7 @@ La funzione per mettere in vendita il proprio prodotto è \textbf{sell\_item} di
 \begin{verbatim}
 from sell import sell_item
 \end{verbatim}
-\\
+\mbox{}\\
 \textbf{Esempio}
 \\
 Uno script per vendere il proprio prodotto può essere impostato come segue:
@@ -170,49 +230,4 @@ Dove :
   \item \textbf{paymement entry id: 3}: indica che l'id dell'oggetto messo in vendita è 3;
   \item \textbf{price: 2}: indica che il prezzo a cui è stato messo in vendita il prodotto è di 2\$.
 \end{itemize}
-\section{Visualizzazione e gestione transazioni}
-Per la visualizzazione delle transazioni ricevute da un e-commerce in entrata, è necessario recarsi nella sezione \textbf{Incoming} (Fig. 4) su Shop Chain. Selezionando una transazione sarà possibile gestirla e vederne i dettagli.
-\FloatBarrier
-\begin{figure}[!h]
-\centering
-\includegraphics[width=0.8\linewidth]{img/incoming.png}
-\caption{Sezione Incoming.}
-\end{figure}
-\FloatBarrier
-\subsubsection{Visualizzazione transazione}
-\\Selezionando una transazione è possibile visualizzare le seguenti informazioni (Fig. 5 riquadro 1):
-\begin{itemize}
-  \item \textbf{Price:} indica il prezzo dell'oggetto acquistato;
-  \item \textbf{From:} indica l'address del wallet dell'acquirente;
-  \item \textbf{To:} indica l'address del proprio wallet, ovvero il wallet che ha ricevuto il pagamento;
-  \item \textbf{Opened:} indica la data in cui è stato eseguito l'acquisto;
-  \item \textbf{Expire:} indica la data in cui scade l'ordine e in cui i fondi vengono automaticamente sbloccati, si tratta di 14 giorni dopo l'acquisto.
-  \item \textbf{Stato dell'ordine}:
-  \begin{itemize}
-    \item \textbf{Open}: l'ordine è ancora aperto e in attesa di conferma;
-    \item \textbf{Confirmed}: l'ordine è già stato confermato attraverso la scannerizzazione del codice QR dall'acquirente;
-    \item \textbf{Expired}: l'utente ha chiesto il refund poiché non ha ricevuto il pacco entro 14 giorni;
-    \item \textbf{Canceled}: l'ordine è stato rifiutato dall'e-commerce. I fondi utilizzati per il pagamento vengono restituiti all'acquirente nella valuta stabile DAI.
-  \end{itemize}
-\end{itemize}
-\subsubsection{Gestione transazione}
-Per ciascuna vendita l'e-commerce può scegliere se (Fig. 5 riquadro 2):
-\begin{itemize}
-  \item \textbf{Accettare il pagamento:} l'e-commerce che decide di accettare il pagamento deve necessariamente seguire la procedura sotto riportata per permettere all'acquirente di sbloccare i fondi nel momento della ricezione del pacco.\\
-  La procedura prevede di:
-  \begin{itemize}
-    \item Selezionare l'opzione "Download QR";
-    \item stampare il codice QR scaricato in formato .png;
-    \item attaccare la stampa del codice QR sul pacco contenente l'oggetto acquistato prima di spedirlo.
-  \end{itemize}
-  \\Una volta spedito il pacco è necessario aspettare la ricezione e lo sblocco fondi da parte dell'acquirente. In caso l'acquirente non sblocchi manualmente i fondi, questi verranno resi disponibili al venditore dopo 14 giorni dall'acquisto.
-  \item \textbf{Annullare il pagamento:} l'e-commerce che decide di annullare il pagamento deve selezionare l'opzione "Cancel transaction". L'acquirente viene rimborsato in DAI con l'esatto importo pagato al momento dell'acquisto.
-\end{itemize}
-\FloatBarrier
-\begin{figure}[!h]
-\centering
-\includegraphics[width=0.5\linewidth]{img/transazione_venditore.png}
-\caption{Visualizzazione e gestione vendite.}
-\end{figure}
-\FloatBarrier
 \end{document}
