--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -25,6 +25,8 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{1.0.0}{12/02/2022}{Giovanni Cocco}{Approvazione}{Approvazione per RTB}
 \addversione{2.0.0}{19/03/2022}{Giovanni Cocco}{Redazione}{Rifacimento documento}
 \addversione{2.1.0}{27/03/2022}{Giovanni Cocco}{Redazione}{Ciclo 1}
+\addversione{2.2.0}{02/04/2022}{Matteo Galvagni}{Redazione}{Ciclo 2}
+
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -130,7 +132,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 Il metodo di lavoro fa uso del framework SCRUM. Si farà inoltre uso della tecnica di Continuos Integration.\\
 Questo metodo si presta meglio di un modello a cascata data la difficoltà di realizzare una pianificazione accurata a monte con tecnologie poco conosciute.\\\\
 Tuttavia si terrà che:
-\begin{itemize} 
+\begin{itemize}
     \item dei cicli non vadano a buon fine portando a iterazioni (ove incrementi sono sempre preferibili);
     \item delle attività critiche blocchino le altre portando a una perdita di parallelismo all'interno del gruppo.
 \end{itemize}
@@ -427,6 +429,71 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         \textbf{Nozione} & \textbf{Conseguenza sulla pianificazione}\\
         \hline
         Necessità di chiarimenti sui documenti & Aumento dei tempi\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\subsection{Sprint 2}
+\textbf{Data di inizio:} 30-03-2022\\
+\textbf{Data di fine pianificata:} 07-04-2022\\
+\textbf{Data di fine effettiva:} TODO
+
+\subsubsection{Pianificazione}\mbox{}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Item da realizzare}}\\
+        \hline
+        \hline
+        \textbf{Item} & \textbf{Persone richieste}\\
+        \hline
+        Stesura documento \textit{Specifiche architetturali} & 2\\
+        \hline
+        Aggiornamento documento \textit{Analisi dei Requisiti} & 3\\
+        \hline
+        Stesura manuale e-commerce & 2\\
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
+        \hline
+        \multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}\\
+        \hline
+        \hline
+        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
+        \hline
+        Responsabile    & 30 & 3  & 90\\
+        \hline
+        Amministratore  & 20 & 0  & 0\\
+        \hline
+        Analista        & 25 & 5  & 125\\
+        \hline
+        Progettista     & 25 & 4  & 100\\
+        \hline
+        Programmatore   & 15 & 4  & 60\\
+        \hline
+        Verificatore    & 15 & 2  & 30\\
+        \hline
+        \hline
+        \textbf{Totale} &    & 18 & 405\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Possibili problematiche}}\\
+        \hline
+        \hline
+        \textbf{Problema} & \textbf{Misure di mitigazione}\\
+        \hline
+        Eventuali dubbi sui documenti & Si chiederà un colloquio al docente Cardin per eventuali chiarimenti\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
