risolto typo e fixato pdp ciclo 2

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -398,7 +398,7 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         Verificatore    & 15 & 10  & 150\\
         \hline
         \hline
-        \textbf{Totale} &    & 105 & 1630 (-300)\\
+        \textbf{Totale} &    & 85 & 1630 (-300)\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
@@ -466,20 +466,20 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         \hline
         \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
         \hline
-        Responsabile    & 30 & 3  & 90\\
+        Responsabile    & 30 & 4  & 120\\
         \hline
-        Amministratore  & 20 & 0  & 0\\
+        Amministratore  & 20 & 6  & 120\\
         \hline
-        Analista        & 25 & 5  & 125\\
+        Analista        & 25 & 8  & 200\\
         \hline
-        Progettista     & 25 & 4  & 100\\
+        Progettista     & 25 & 10  & 250\\
         \hline
-        Programmatore   & 15 & 4  & 60\\
+        Programmatore   & 15 & 18  & 270\\
         \hline
-        Verificatore    & 15 & 2  & 30\\
+        Verificatore    & 15 & 8  & 120\\
         \hline
         \hline
-        \textbf{Totale} &    & 18 & 405\\
+        \textbf{Totale} &    & 54 & 1080\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
@@ -493,7 +493,7 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         \hline
         \textbf{Problema} & \textbf{Misure di mitigazione}\\
         \hline
-        Eventuali dubbi sui documenti & Si chiederà un colloquio al docente Cardin per eventuali chiarimenti\\
+        Eventuali dubbi sulla stesura dei documenti & Si farà una riunione per decidere come redigerli.\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
