fixato diagramma classi contratto

--- a/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
+++ b/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
@@ -167,6 +167,7 @@ Schema delle tabelle del database.\\
 \paragraph{Commenti}
 In Solidity esistono due particolari visibilità di funzione che differiscono da quelle normali: \textit{internal} ed \textit{external}.
 Una funzione \textit{internal} può essere chiamata solo dal contratto in cui è dichiarata e da contratti derivanti.
+È l'equivalente di \textit{protected}.
 Una funzione \textit{external} può essere chiamata solo dall'esterno e non all'interno del contratto stesso.
 \subsubsection{Lista dei metodi}
 \begin{itemize}
