--- a/docs/esterni/manuali/manuale_acquirente.tex
+++ b/docs/esterni/manuali/manuale_acquirente.tex
@@ -104,7 +104,7 @@ Inoltre attraverso la sezione "Outgoing" posta nel menù in alto a destra (Fig. 
   \end{itemize}
 \end{itemize}
 \subsection{Gestione acquisti}
-Dopo 14 giorni dalla data di acquisto, se i fondi non sono stati sbloccati dall'acquirente attraverso la scannerizzazione del codice QR, avverrà il rimborso in DAI dell'esatto importo pagato. Nel caso l'acquirente voglia annullare il pagamento manualmente, potrà selezionare l'opzione "Refund transaction" (Fig. 4 riquadro 2) e dunque ricevere il rimborso.
+Dopo 14 giorni dalla data di acquisto, se i fondi non sono stati sbloccati dall'acquirente attraverso la scannerizzazione del codice QR, avverrà il rimborso in DAI dell'esatto importo pagato. Nel caso in cui dopo 14 giorni l'acquirente non ha ancora ricevuto né il pacco né il rimborso, potrà annullare il pagamento manualmente selezionando l'opzione "Refund transaction" (Fig. 4 riquadro 2) e dunque ricevere il rimborso.
 \FloatBarrier
 \begin{figure}[!h]
 \centering
