--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -33,7 +33,7 @@ Analisi dei requisiti del progetto ShopChain con casi d'uso e requisiti.
 \addversione{1.0.1}{01/03/2022}{Giovanni Cocco}{Redazione}{Approfondimento requisiti funzionali}
 \addversione{1.0.2}{01/03/2022}{Elia Scandaletti}{Redazione}{Applicazione indicazioni del prof. Cardin}
 \addversione{1.0.3}{11/03/2022}{Alberto Nicoletti}{Redazione}{Applicazione indicazioni del prof. Cardin}
-\addversione{1.1.0}{01/04/2022}{Persona}{Redazione}{Placeholder per le aggiunte che andranno fatte}
+\addversione{1.1.0}{01/04/2022}{Andrea Volpe}{Redazione}{Riadattato casi d'uso e requisiti in base alle nuove modifiche}
 
 
 \begin{document}
@@ -146,6 +146,13 @@ Per il completamento del progetto il proponente richiede che siano ottenuti i se
 \textbf{Scenario principale}:
 Il venditore usando Metamask, si connette alla webapp con il proprio wallet.\\
 \textbf{Requisiti collegati}: RFO01, RFO34.
+\textbf{Estensione}:
+UC2.1 Errore venditore con wallet non connesso:
+\begin{enumerate}
+    \item Il sistema mostra un messaggio di errore wallet non connesso.
+    \item Il sistema non permette al venditore di entrare entrare nel sistema.
+\end{enumerate}
+\textbf{Requisiti collegati all'estensione UC2.1}: RFO02.
 
 \includegraphics[width=0.9\textwidth]{UC_WAV3}
 \captionof{figure}{Casi d'uso UC3 e UC4}
@@ -286,8 +293,8 @@ Viene mostrato all'acquirente il riepilogo della transazione con il prezzo in do
 \textbf{Estensione}:
 UC8.1 Visualizzazione messaggio procedura di pagamento annullata:
 \begin{enumerate}
-    \item visualizzazione messaggio procedura di pagamento annullata;
     \item cancellazione sessione di pagamento.
+    \item l'acquirente viene indirizzato presso l'home page di \textit{google.com}.
 \end{enumerate}
 \textbf{Requisiti collegati all'estensione UC8.1}: RFO15, RFO16.
 
@@ -340,7 +347,7 @@ L'acquirente usando Metamask, si connette con il proprio wallet.
 \textbf{Requisiti collegati}: RFO19.
 
 \includegraphics[width=0.9\textwidth]{UC_WAA2}
-\captionof{figure}{Casi d'uso UC11, UC12 e UC12.1}
+\captionof{figure}{Casi d'uso UC11, UC12}
 
 \paragraph{UC11 - Visualizzazione conferma ricezione}\\
 \textbf{Attore primario}: Acquirente con wallet connesso.\\
@@ -360,13 +367,6 @@ Vengono mostrati i dati relativi alla transazione e un pulsante per confermare l
     \item Il denaro viene sbloccato e mandato nel wallet del venditore.
 \end{enumerate}
 \textbf{Requisiti collegati}: RFO22, RFO45, RFO46.\\
-\textbf{Estensione}:
-UC12.1 Errore wallet non corretto:
-\begin{enumerate}
-    \item Viene mostrato un messaggio di errore spiegando che il wallet con cui è connesso l'acquirente non è corretto.
-    \item Si invita a cambiare wallet e riprovare.
-\end{enumerate}
-\textbf{Requisiti collegati all'estensione UC12.1}: RFO23.
 
 \includegraphics[width=0.9\textwidth]{UC_ECA1}
 \captionof{figure}{Caso d'uso UC13}
@@ -484,7 +484,7 @@ Ogni requisito è identificato da un codice univoco composto da: R(per requisito
 \hline
 RFO01 & Per accedere alla webapp venditore il venditore con wallet non connesso deve connettere il proprio wallet tramite Metamask. & Obbligatorio & UC2 \\
 \hline
-RFO02 & Un venditore con wallet non connesso non può accedere alla webapp venditore. & Obbligatorio & \underline{\href{https://www.math.unipd.it/~tullio/IS-1/2021/Progetto/C2.pdf}{Capitolato}} \\
+RFO02 & Un venditore con wallet non connesso non può accedere alla webapp venditore. & Obbligatorio & UC2.1, \underline{\href{https://www.math.unipd.it/~tullio/IS-1/2021/Progetto/C2.pdf}{Capitolato}} \\
 \hline
 RFO34 & La webapp deve comunicare il wallet del venditore al server. & Obbligatorio & UC2\\
 \hline
@@ -530,13 +530,15 @@ RFO12 & Un acquirente con wallet non connesso non può accedere alla landing pag
 \hline
 RFO50 & La landing page deve tracciare l'id dell'oggetto venduto tramite metodo GET. & Obbligatorio & \underline{\href{https://www.math.unipd.it/~tullio/IS-1/2021/Progetto/C2.pdf}{Capitolato}}, \underline{\href{https://github.com/iota97/WinningSoftwareSolution/blob/main/public/esterni/verbali/2021_12_22_E.pdf}{verbale del 22/12/2021}}, \underline{\href{https://github.com/iota97/WinningSoftwareSolution/blob/main/public/interni/verbali/2021_12_23_I.pdf}{verbale del 23/12/2021}} \\
 \hline
-RFO13 & L'acquirente con wallet connesso deve vedere il prezzo da pagare in dollari nella landing page. & Obbligatorio & UC7 \\
+RFOX & L'acquirente con wallet connesso deve vedere il prezzo dell'oggetto nella landing page. & Obbligatorio & UC7.1 \\
+\hline
+RFOX & L'acquirente con wallet connesso deve vedere il wallet del venditore dell'oggetto nella landing page. & Obbligatorio & UC7.2 \\
 \hline
 RFO14 & L'acquirente con wallet connesso poter confermare il pagamento nella landing page. & Obbligatorio & UC8 \\
 \hline
-RFO15 & Il sistema deve mostrare un messaggio "ordine annullato" se l'acquirente con wallet connesso annulla il pagamento sulla landing page. & Obbligatorio & UC8.1 \\
-\hline
 RFO16 & Il sistema deve cancellare la sessione di pagamento se l'acquirente con wallet connesso annulla il pagamento sulla landing page. & Obbligatorio & UC8.1 \\
+\hline
+RFO15 & Il sistema deve reindirizzare l'acquirente sulla home page di \textit{google.com} se l'acquirente con wallet connesso annulla il pagamento sulla landing page. & Obbligatorio & UC8.1 \\
 \hline
 RFO17 & L'acquirente con wallet connesso deve essere indirizzato automaticamente su Metamask per completare il pagamento, quando conferma il pagamento sulla landing page. & Obbligatorio & UC9 \\
 \hline
@@ -556,8 +558,6 @@ RFO22 & L'acquirente con wallet connesso deve poter confermare la ricezione del 
 RFO45 & La landing page deve attraverso Metamask chiamare il metodo di conferma dello smart contract. & Obbligatorio & UC12 \\
 \hline
 RFO46 & Lo smart contract deve permettere la chiamata del metodo di conferma solo all'acquirente (identificato dal suo wallet). & Obbligatorio & UC12 \\
-\hline
-RFO23 & Il sistema deve mostrare un messaggio di errore "wallet non corretto" nella webapp acquirente, nel caso in cui dopo aver confermato la ricezione del pacco nella webapp acquirente, il sistema rileva che il wallet non corrisponde a quello che ha effettuato la transazione. & Obbligatorio & UC12.1 \\
 \hline
 % E-COMMERCE
 RFO24 & Per accedere alla pagina con la sua lista delle transazioni in e-commerce, l'acquirente con wallet non connesso deve connettere il proprio wallet tramite Metamask. & Obbligatorio & UC13 \\
